--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,5 +1,14 @@
-@import './common';
-// @import './example';
+@import './utils/variables';
+@import './utils/visually-hidden';
+@import './utils/mixins';
+@import './utils/breakpoints';
+
+@import './base/base';
+@import './base/section';
+@import './base/container';
+
+@import './components/button';
+@import './components/modal-windows';
 
 @import './layout/header';
 @import './layout/hero';
@@ -11,3 +20,4 @@
 @import './layout/contacts';
 @import './layout/footer';
 
+// @import './example';
