--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -2,4 +2,5 @@
     --primary-text-color: #131313;
     --title-text-color: #000000;
     --title-text-color-secondary:#FCFCFC;
+    --background-color: #84A178;
 }
