--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -1,3 +1,10 @@
+body {
+    background-color: var(--background-color);
+    color: var(--primary-text-color);
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    letter-spacing: 0.04em;
+}
 
 h1,
 h2,
