--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,6 +1,6 @@
 <section class="section-advantages">
     <h2 class="visually-hidden">Advantages</h2>
-        <ul class="advantages-list">
+        <ul class="advantages-list list">
         <li class="advantages-list__item">
             <svg class="advantages-list__icon">
                 <use href="#"></use>
