--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -1,19 +1,26 @@
 .container {
     
-    padding: 0 15px;
+    padding-left: 20px;
+    padding-right: 20px;
+
     margin: 0 auto;
 
-    @media screen and (max-width: 320px) {
-        width: 100%;
-        }
+    // @media screen and (max-width: 479px) {
+    //     width: 100%;
+    //     }
+
     @media screen and (min-width: 480px) {
         width: 480px;
         }
 
     @media screen and (min-width: 768px) {
         width: 768px;
+        padding-left: 32px;
+        padding-right: 32px;
     }
     @media screen and (min-width: 1200px) {
         width: 1200px;
+        padding-left: 16px;
+        padding-right: 16px;
     }
 }
