--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,7 +1,7 @@
 <section class="galary">
   <div class="galary-icecream">
     <h2 class="galary-icecream__title visually-hidden">galary</h2>
-    <ul class="galary-icecream__list">
+    <ul class="galary-icecream__list carousel">
       <li class="galary-icecream__items">
         <img
           width="200px"
