--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -10,5 +10,5 @@
 @import './layout/customer-reviews';
 @import './layout/contacts';
 @import './layout/footer';
-@import './libs/slick.scss';
-
+@import './layout/slick';
+@import './base/base';
