--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -4,7 +4,7 @@
         <ul class="contacts-list list">
             <li class="contacts-list__item">
                 <p class="contacts-list__subtitle">CAFE</p>
-                <h3 class="cotacts-list__title">Chicago</h3>
+                <h3 class="contacts-list__title">Chicago</h3>
                 <p class="contacts-list__address">10340 Ridgeland Ave, Chicago Ridge, IL 60415, USA</p>
                 <p class="contacts-list__weekdays-work">Monday - Friday</p>
                 <p class="contacts-list__weekdays-work-time">06:00 AM - 10:00 PM</p>
@@ -16,7 +16,7 @@
             </li>
             <li class="contacts-list__item">
                 <p class="contacts-list__subtitle">FOOD TRUCK</p>
-                <h3 class="cotacts-list__title">Los Angeles</h3>
+                <h3 class="contacts-list__title">Los Angeles</h3>
                 <p class="contacts-list__address">1003 Manhattan Ave, Manhattan Beach, CA 90263, USA</p>
                 <p class="contacts-list__weekdays-work">Monday - Friday</p>
                 <p class="contacts-list__weekdays-work-time">06:00 AM - 10:00 PM</p>
@@ -28,7 +28,7 @@
             </li>
             <li class="contacts-list__item">
                 <p class="contacts-list__subtitle">CAFE</p>
-                <h3 class="cotacts-list__title">New York</h3>
+                <h3 class="contacts-list__title">New York</h3>
                 <p class="contacts-list__address">726 Sterling Pl, Brooklyn, NY 11222, USA</p>
                 <p class="contacts-list__weekdays-work">Monday - Friday</p>
                 <p class="contacts-list__weekdays-work-time">06:00 AM - 10:00 PM</p>
