--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -3,4 +3,10 @@
     --title-text-color: #000000;
     --title-text-color-secondary:#FCFCFC;
     --background-color: #84A178;
+    --button-color: #F8D24E;
+    --button-color-accent: #0A8817;
+    --button-text-black: #000000;
+    --button-text-white: #FCFCFC;
+    --transition-func: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
