--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -5,13 +5,13 @@
         <ul class="product__list card-set list">
             <li class="product__item card-set__item green">
                 <picture>
-                    <source srcset="" media="(min-width: 1200px)">
+                    <source srcset="./src/images/logo.png" media="(min-width: 1200px)">
             
-                    <source srcset="" media="(min-width: 768px)">
+                    <source srcset="./src/images/logo.png" media="(min-width: 768px)">
             
-                    <source srcset="" media="(min-width: 320px)">
+                    <source srcset="./src/images/logo.png" media="(min-width: 320px)">
             
-                    <img src="" alt="">
+                    <img src="./src/images/logo.png" alt="kkll">
             
                 </picture>
             
@@ -20,19 +20,19 @@
                 </p>
                 <button class="button-info" type="button">
                     <svg class="info-icon" width="20" height="20">
-                        <use href="">
+                        <use href="./src/images/logo.png">
                     </svg>
                 </button>
             </li>
             <li class="product__item card-set__item yellow">
                 <picture>
-                    <source srcset="" media="(min-width: 1200px)">
+                    <source srcset="./src/images/logo.png" media="(min-width: 1200px)">
             
-                    <source srcset="" media="(min-width: 768px)">
+                    <source srcset="./src/images/logo.png" media="(min-width: 768px)">
             
-                    <source srcset="" media="(min-width: 320px)">
+                    <source srcset="./src/images/logo.png" media="(min-width: 320px)">
             
-                    <img src="" alt="">
+                    <img src="./src/images/logo.png" alt="gjj">
             
                 </picture>
             
@@ -42,19 +42,19 @@
                 </p>
                 <button class="button-info" type="button">
                     <svg class="info-icon" width="20" height="20">
-                        <use href="">
+                        <use href="./src/images/logo.png">
                     </svg>
                 </button>
             </li>
             <li class="product__item card-set__item red">
                 <picture>
-                    <source srcset="" media="(min-width: 1200px)">
+                    <source srcset="./src/images/logo.png" media="(min-width: 1200px)">
             
-                    <source srcset="" media="(min-width: 768px)">
+                    <source srcset="./src/images/logo.png" media="(min-width: 768px)">
             
-                    <source srcset="" media="(min-width: 320px)">
+                    <source srcset="./src/images/logo.png" media="(min-width: 320px)">
             
-                    <img src="" alt="">
+                    <img src="./src/images/logo.png" alt="cvbv">
             
             
                 </picture>
@@ -65,7 +65,7 @@
                 </p>
                 <button class="button-info" type="button">
                     <svg class="info-icon" width="20" height="20">
-                        <use href="">
+                        <use href="./src/images/logo.png">
                     </svg>
                 </button>
             </li>
