--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -30,4 +30,7 @@
         <p class="footer-contact__text">Feel free to contact</p>
         <a class="footer-contact__tel link" href="tel:+610383766284">+61 (0) 383 766 284</a>
     </div>
+    <div class="copyright">
+        <p class="copyright__text">&copy; 2022 - IceCream. All Rights Reserved. </p>
+    </div>
 </footer>
