--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,7 +1,7 @@
 <section class="customer">
   <div class="customer-box">
     <h2 class="customer-box__title visually-hidden">customer reviews</h2>
-    <ul class="customer-box__list">
+    <ul class="customer-box__list carousel">
       <li class="customer-box__items">
         <div class="customer-box__slider">
           <img
