--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -10,5 +10,6 @@
 @import './layout/customer-reviews';
 @import './layout/contacts';
 @import './layout/footer';
-@import './layout/slick';
+@import './layout/slickgalary';
 @import './base/base';
+@import './utils/visuallu-hidden';
