--- a/src/sass/layout/_slickgalary.scss
+++ b/src/sass/layout/_slickgalary.scss
@@ -37,4 +37,22 @@ background-size: cover;
 .galary-icecream__list .slick-dots{
     display: flex;
 justify-content: center;
+    & li:not(:last-child) {
+            margin-right: 10px;
+        }
+}
+
+.galary-icecream__list .slick-dots button{
+    font-size: 0;
+    width: 10px;
+    height: 10px;
+    padding: 0;
+    border-radius: 60%;
+    border-color: aqua;
+    background-color: violet;
+}
+
+.galary-icecream__list .slick-dots .slick-active button{
+    background-color: black;
+    transition: all 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
