--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,17 +1,20 @@
-<section class="products">
+<section class="products" id="products">
     <div class="container">
         <p class="label">100% natural</p>
         <h2 class="titel">products</h2>
         <ul class="product__list card-set list">
             <li class="product__item card-set__item green">
                 <picture>
-                    <source srcset="./src/images/logo.png" media="(min-width: 1200px)">
+                    <source srcset="./images/product-1-desktop.jpg 1x, ./images/product-1-desktop@2x.jpg 2x, ./images/product-1-desktop@3x.jpg 3x" 
+                    media="(min-width: 1200px)"/>
             
-                    <source srcset="./src/images/logo.png" media="(min-width: 768px)">
+                    <source srcset="./images/product-1-tablet.jpg 1x, ./images/product-1-tablet@2x.jpg 2x" 
+                    media="(min-width: 768px)"/>
             
-                    <source srcset="./src/images/logo.png" media="(min-width: 320px)">
+                    <source srcset="./images/product-1-mobile.jpg 1x, ./images/product-1-mobile@2x.jpg 2x" 
+                    media="(min-width: 320px)"/>
             
-                    <img src="./src/images/logo.png" alt="kkll">
+                    <img class="product__img" src="./images/product-1-mobile.jpg" alt="ice cream"/>
             
                 </picture>
             
@@ -20,19 +23,22 @@
                 </p>
                 <button class="button-info" type="button">
                     <svg class="info-icon" width="20" height="20">
-                        <use href="./src/images/logo.png">
+                        <use href="#"></use>
                     </svg>
                 </button>
             </li>
             <li class="product__item card-set__item yellow">
                 <picture>
-                    <source srcset="./src/images/logo.png" media="(min-width: 1200px)">
+                    <source srcset="./images/product-2-desktop.jpg 1x, ./images/product-2-desktop@2x.jpg 2x, ./images/product-2-desktop@3x.jpg 3x" 
+                    media="(min-width: 1200px)"/>
             
-                    <source srcset="./src/images/logo.png" media="(min-width: 768px)">
+                    <source srcset="./images/product-2-tablet.jpg 1x, ./images/product-2-tablet@2x.jpg 2x" 
+                    media="(min-width: 768px)"/>
             
-                    <source srcset="./src/images/logo.png" media="(min-width: 320px)">
+                    <source srcset="./images/product-2-mobile.jpg 1x, ./images/product-2-mobile@2x.jpg 2x" 
+                    media="(min-width: 320px)"/>
             
-                    <img src="./src/images/logo.png" alt="gjj">
+                    <img class="product__img" src="./images/product-2-mobile.jpg" alt="ice coffee"/>
             
                 </picture>
             
@@ -42,30 +48,32 @@
                 </p>
                 <button class="button-info" type="button">
                     <svg class="info-icon" width="20" height="20">
-                        <use href="./src/images/logo.png">
+                        <use href="#"></use>
                     </svg>
                 </button>
             </li>
             <li class="product__item card-set__item red">
                 <picture>
-                    <source srcset="./src/images/logo.png" media="(min-width: 1200px)">
-            
-                    <source srcset="./src/images/logo.png" media="(min-width: 768px)">
-            
-                    <source srcset="./src/images/logo.png" media="(min-width: 320px)">
-            
-                    <img src="./src/images/logo.png" alt="cvbv">
-            
-            
+                    <source
+                        srcset="./images/product-3-desktop.jpg 1x, ./images/product-3-desktop@2x.jpg 2x, ./images/product-3-desktop@3x.jpg 3x"
+                        media="(min-width: 1200px)"/>
+
+                    <source srcset="./images/product-3-mobile.jpg 1x, ./images/product-3-mobile@2x.jpg 2x" 
+                    media="(min-width: 320px)"/>
+
+                    <source srcset="./images/product-3-mobile.jpg 1x, ./images/product-3-mobile@2x.jpg 2x" 
+                    media="(min-width: 320px)"/>
+
+                    <img class="product__img" src="./images/product-3-mobile.jpg" alt="milkshakes"/>
+                    
                 </picture>
-            
                 <h3 class="product__titel">milkshakes</h3>
                 <p class="text">Sweet drinks based on milk and ice cream, supplemented with syrups, fruits, berries and other sweets
-                    of your choice
+                of your choice
                 </p>
                 <button class="button-info" type="button">
                     <svg class="info-icon" width="20" height="20">
-                        <use href="./src/images/logo.png">
+                        <use href="#"></use>
                     </svg>
                 </button>
             </li>
