--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -3,6 +3,9 @@
 }
 
 .titel {
+    
+
+
     font-weight: 400;
     font-size: 30px;
     line-height: 1.26;
@@ -17,14 +20,40 @@
 }
 
 .product__titel {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.2;
+
+
+
     padding-bottom: 40px;
 }
 
 .text {
     text-align: center;
     margin-bottom: 90px;
-}
 
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 176%;
+        
+    
+        
+    letter-spacing: 0.04em;
+    
+    color: #131313;
+    color: var(--primary-text-color);
+
+
+
+}
+.product__list {
+    padding: 0;
+}
 
 
 
@@ -38,8 +67,8 @@
     border-radius: 24px;
     padding-left: 40px;
     padding-right: 40px;
-    padding-top: 186px;
-    padding-bottom: 20px;
+    // padding-top: 20px;
+    // padding-bottom: 20px;
 }
 
 .green {
@@ -54,4 +83,48 @@
 
 .red {
     background-color: #D6936D;
+}
+.product__img {
+    border-radius: 50%;
+    position: relative;
+    bottom: 100px;
+
+
+    // background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #D9D9D9;
+        
+    // box-shadow: 0px 5.40397px 20.2649px rgba(153, 114, 23, 0.25);
+
+
+    background-image: linear-gradient(0deg, rgba(213, 117, 63, 0.7), rgba(213, 117, 63, 0.7)), #D9D9D9;
+    box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.25);
+}
+
+// card-set
+ .card-set {
+     display: flex;
+     flex-wrap: wrap;
+     gap: var(--indent);
+
+ }
+
+ .card-set__item {
+
+     flex-basis: calc((100% - var(--indent) * var(--items) - 1) / var(--items));
+ }
+
+.product__item {
+    --items: 1;
+
+
+    @media screen and (min-width: 768px) {
+        --items: 3;
+
+
+    }
+
+    @media screen and (min-width: 1200px) {
+        --items: 3;
+
+    }
+
 }
