--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -9,4 +9,7 @@
     --button-text-white: #FCFCFC;
     --transition-func: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+    --indent: 30px;
+    --items: 3;
+
 }
