modal maps form

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -40,8 +40,8 @@
             </li>
         </ul>
         <div class="contacts-button">
-            <button class="contacts-button__location button-color" type="button">
-                <a class="contacts-button__location-link link" href="">Our Locations</a>
+            <button class="contacts-button__location button-color" type="button" data-modal-open>
+                Our Locations
             </button>
             <button class="contacts-button__franchise button-transparent" type="button">
                 <a class="contacts-button__franchise-link link" href="">Franchise</a>
