--- a/src/partials/modal-windows.html
+++ b/src/partials/modal-windows.html
@@ -17,8 +17,8 @@
                 style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-        <button type="button" class="modal-open-map" data-open-map="">
-            Open map
+        <button type="button" class="modal-open-map button-color" data-open-map="">
+            <a class="link" href="https://goo.gl/maps/DC4DyfJQhU2LMTEr9">Open map</a>
         </button>
     </div>
 </div>
