--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -108,6 +108,6 @@
 }
 
 .contacts-button__franchise-link::after, .contacts-button__location-link::after {
-    background-image: url('./images/arrow.svg');
+    background-image: url('../images/arrow.svg');
     color: currentColor;
 }
