--- a/src/sass/components/_modal-windows.scss
+++ b/src/sass/components/_modal-windows.scss
@@ -1,3 +1,24 @@
+
+
+
+.backdrop {
+    position: fixed;
+    z-index: 100;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .2);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+
+    &.is-hidden {
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+    }
+}
+
 @media screen and (max-width:767px) {
     
     .modal {
@@ -5,11 +26,11 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        width: 568px;
+        width: 280px;
         height: auto;
-        background-color: var(--primary-text-color-theme-dark);
-        border-radius: 4px;
-        padding: 32px 60px;
+        background-color: #ffffff;
+        border-radius: 10px;
+        padding: 28px 28px;
 
     }
 
@@ -17,11 +38,20 @@
         .modal-map {
             max-width: 100%;
             position: relative;
+            margin-bottom: 24px;
+            border-radius: 10px; 
+
             &>iframe {
                 width: 100%;
                 height: 260px;
             }
         }
+
+.modal-open-map {
+    padding: 7px 37px;
+    margin: 0 auto;
+    display: block;
+}
 
     .modal-close-btn {
         position: absolute;
@@ -32,16 +62,9 @@
         align-items: center;
         width: 30px;
         height: 30px;
-        border-radius: 50%;
+        border: none;
         padding: 0;
         background-color: transparent;
-        border: 1px solid rgba(0, 0, 0, 0.1);
-        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-        &:hover,
-        &:hover {
-            color: var(--color-blue);
-        }
     }
 
 
@@ -50,6 +73,21 @@
         width: 12px;
         height: 12px;
     }
+
+
+        .modal-form-text {
+            font-family: 'Seymour One';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 24px;
+            text-align: center;
+            color: var(--title-text-color--);
+            margin-bottom: 20px;
+        }
+
+
+          
 }
 
 
@@ -59,12 +97,42 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        width: 450px;
-        height: 609px;
-        background-color: var(--primary-text-color-theme-dark);
-        border-radius: 4px;
-        padding: 40px;
+        width: 568px;
+        height: auto;
+        background-color: #ffffff;
+        border-radius: 10px;
+        padding: 32px 60px; 
     }
+
+
+        .modal-map {
+            max-width: 100%;
+            position: relative;
+            margin-bottom: 24px;
+            border-radius: 10px;
+    
+            &>iframe {
+                width: 100%;
+                height: 260px;
+            }
+        }
+    
+        .modal-open-map {
+            padding: 7px 37px;
+            margin: 0 auto;
+            display: block;
+        }
+
+        .modal-form-text {
+            font-family: 'Seymour One';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 20px;
+            line-height: 28px;
+            text-align: center;
+            color: var(--title-text-color--);
+            margin-bottom: 20px;
+        }
 
     .modal-close-btn {
         position: absolute;
@@ -75,18 +143,10 @@
         align-items: center;
         width: 30px;
         height: 30px;
-        border-radius: 50%;
         padding: 0;
         background-color: transparent;
-        border: 1px solid rgba(0, 0, 0, 0.1);
-        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-        &:hover,
-        &:hover {
-            color: var(--color-blue);
-        }
+        border: none;
     }
-
 
     .modal-close-btn-icon {
         fill: currentColor;
