--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -37,3 +37,12 @@ button {
     text-decoration: none;
     color: inherit;
 }
+
+ul,
+ol {
+    padding-left: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    list-style: none;
+
+}
