--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -14,6 +14,7 @@
 @import './layout/about';
 @import './layout/advantages';
 @import './layout/gallery';
+@import './layout/slickgalary';
 @import './layout/customer-reviews';
 @import './layout/contacts';
 @import './layout/footer';
