add css header hero

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -20,6 +20,7 @@
 
 .header-container {
   padding-top: 12px;
+  // outline: solid 1px red;
 }
 
 .header {
@@ -32,7 +33,7 @@
 .header-logo__icon {
   width: 40px;
   height: 37px;
-  fill: #f8d24e;
+  fill: var(--button-color);
 }
 
 .header-btn-burger__icon-burger {
@@ -51,18 +52,50 @@
 }
 
 .hero-title {
+  display: block;
+  width: 247px;
+
+  @include font(26px, 400, 1.23);
+  font-family: 'Seymour One';
+  text-transform: uppercase;
+  color: var(--button-text-white);
   text-align: left;
 
   margin-bottom: 32px;
 }
 
+.hero-title_upper {
+  @include font(34px, 400, 0.97);
+}
+
+.hero-menu__item {
+  display: block;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  padding-left: 14px;
+  padding-right: 14px;
+
+  border: 2px solid var(--button-color);
+  border-radius: 10px;
+
+  @include font(8px, 600, 1.25);
+
+  transition: border-color var(--transition-func);
+
+  &:focus,
+  &:hover {
+    border-color: var(--button-color-accent);
+  }
+}
+
 .hero-menu {
+  display: block;
   display: flex;
   align-items: flex-start;
   padding-left: 0;
 }
 
-.hero-menu__list {
+.hero-menu__list:not(:last-child) {
   margin-right: 8px;
 }
 
@@ -85,6 +118,22 @@
     margin-right: 31px;
   }
 
+  .header-btn-modal {
+    padding: 12px 34px;
+    @include font(14px, 600, 1.21);
+
+    border-radius: 10px;
+    border: none;
+    background-color: var(--button-color);
+    color: var(--button-text-black);
+    transition: background-color var(--transition-func);
+
+    &:hover,
+    &:focus {
+      background-color: var(--button-color-accent);
+    }
+  }
+
   .header {
     margin-bottom: 40px;
   }
@@ -99,8 +148,25 @@
     right: 0;
   }
 
-  .hero-title {
+  .hero-progress__amount {
+    @include font(28px, 900, 1.21);
+    margin-bottom: 4px;
+  }
+
+  .hero-progress__products {
+    @include font(8px, 400, 1.25);
+    color: #ffffff;
     margin-bottom: 20px;
+  }
+
+  .hero-title {
+    width: 183px;
+    @include font(18px, 400, 1.28);
+    margin-bottom: 21px;
+  }
+
+  .hero-title_upper {
+    @include font(24px, 400, 0.54);
   }
 
   .hero-progress__list {
@@ -110,6 +176,9 @@
   .hero-desc {
     width: 151px;
     margin-bottom: 32px;
+
+    @include font(12px, 400, 1.42);
+    color: #ffffff;
   }
 
   .hero-desc__icon {
@@ -150,6 +219,17 @@
     gap: 27px;
   }
 
+  .header-nav__item {
+    @include font(16px, 700, 1.25);
+    color: var(--button-text-white);
+    transition: color var(--transition-func);
+
+    &:hover,
+    &:focus {
+      color: var(--button-color);
+    }
+  }
+
   .header-btn-burger {
     display: none;
   }
@@ -158,7 +238,49 @@
     margin-left: auto;
   }
 
+  .header {
+    margin-bottom: 45px;
+  }
+
   .hero-title {
+    width: 367px;
+    @include font(38px, 400, 1.26);
     margin-bottom: 28px;
+  }
+
+  .hero-title_upper {
+    @include font(38px, 400, 1.26);
+  }
+
+  .hero-menu__item {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-left: 34px;
+    padding-right: 34px;
+
+    @include font(14px, 600, 1.29);
+  }
+
+  .hero-menu__list:not(:last-child) {
+    margin-right: 12px;
+  }
+
+  .hero-progress__amount {
+    @include font(46px, 900, 1.22);
+    color: var(--primary-text-color);
+    margin-bottom: 4px;
+  }
+
+  .hero-progress__products {
+    @include font(14px, 400, 1.21);
+    color: #ffffff;
+    margin-bottom: 16px;
+  }
+
+  .hero-desc {
+    width: 200px;
+    margin-bottom: 32px;
+
+    @include font(14px, 400, 1.43);
   }
 }
