--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -29,12 +29,14 @@
         <use href="./images/sprite1.svg#burger-icon"></use>
       </svg>
     </button>
-    <button type="button" class="button header-btn-modal">Buy now</button>
+    <button type="button" class="button header-btn-modal">
+      <span class="header-btn-modal__name">Buy now</span>
+    </button>
   </div>
 
   <section class="hero">
     <h1 class="hero-title">
-      ice cream made with <span class="hero-title_uppercase">passion</span>
+      ice cream made with <span class="hero-title_upper">passion</span>
     </h1>
 
     <ul class="hero-menu">
