--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -40,7 +40,7 @@
             </li>
         </ul>
         <div class="contacts-button">
-            <button class="contacts-button__location button-color" type="button" data-modal-open>
+            <button class="contacts-button__location button-color" type="button" data-modal-map-open>
                 Our Locations
             </button>
             <button class="contacts-button__franchise button-transparent" type="button">
