--- a/src/partials/modal-windows.html
+++ b/src/partials/modal-windows.html
@@ -1,8 +1,8 @@
 <!-- --Modal window Our location-- -->
 
-<div class="backdrop is-hidden" data-modal="">
+<div class="backdrop is-hidden" data-modal-map="">
     <div class="modal">
-        <button type="button" class="modal-close-btn" data-modal-close="">
+        <button type="button" class="modal-close-btn" data-modal-map-close="">
             <svg class="modal-close-btn-icon" width="12" height="12">
                 <use href="./images/sprite.svg#icon-close-modal"></use>
 
@@ -17,8 +17,35 @@
                 style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-        <button type="button" class="modal-open-map button-color" data-open-map="">
-            <a class="link" href="https://goo.gl/maps/DC4DyfJQhU2LMTEr9">Open map</a>
+        <button type="button" class="modal-open-map button-color">
+            <a class="link" target="_blank" href="https://goo.gl/maps/DC4DyfJQhU2LMTEr9">Open map</a>
         </button>
+    </div>
+</div>
+
+
+
+<!-- --Modal window video-- -->
+
+<div class="backdrop is-hidden" data-modal-video="">
+    <div class="modal">
+        <button type="button" class="modal-close-btn" data-modal-video-close="">
+            <svg class="modal-close-btn-icon" width="12" height="12">
+                <use href="./images/sprite.svg#icon-close-modal"></use>
+
+            </svg>
+        </button>
+        <p class="modal-form-text">
+            How it’s made?
+        </p>
+        <div class="modal-video">
+            <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player"
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
+        <p class="modal-video-descr">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et Lorem ipsum dolor
+        sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+        </p>
     </div>
 </div>
