--- a/src/sass/components/_modal-windows.scss
+++ b/src/sass/components/_modal-windows.scss
@@ -43,9 +43,29 @@
 
             &>iframe {
                 width: 100%;
-                height: 260px;
+                height: 199px;
             }
         }
+
+        .modal-video {
+            max-width: 100%;
+            position: relative;
+            border-radius: 10px;
+            margin-bottom: 20px;
+
+            &>iframe {
+                    width: 100%;
+                    height: 199px;
+                }
+        }
+
+     .modal-video-descr {
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 140%;
+     }
 
 .modal-open-map {
     padding: 7px 37px;
@@ -123,6 +143,28 @@
             display: block;
         }
 
+
+        .modal-video {
+            max-width: 100%;
+            position: relative;
+            border-radius: 10px;
+            margin-bottom: 32px;
+
+            &>iframe {
+                width: 100%;
+                height: 205px;
+            }
+        }
+
+        .modal-video-descr {
+            font-family: 'Montserrat';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 140%;
+        }
+
+
         .modal-form-text {
             font-family: 'Seymour One';
             font-style: normal;
@@ -131,7 +173,7 @@
             line-height: 28px;
             text-align: center;
             color: var(--title-text-color--);
-            margin-bottom: 20px;
+            margin-bottom: 32px;
         }
 
     .modal-close-btn {
