--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -3,23 +3,23 @@
         <h2 class="visually-hidden">Advantages</h2>
         <ul class="advantages-list list">
         <li class="advantages-list__item">
-            <svg class="advantages-list__icon">
+            <!-- <svg class="advantages-list__icon">
                 <use href="./images/sprite.svg#icon-cow"></use>
-            </svg>
+            </svg> -->
             <h3 class="advantages-list__title">721</h3>
             <p class="advantages-list__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
         </li>
         <li class="advantages-list__item">
-            <svg class="advantages-list__icon">
+            <!-- <svg class="advantages-list__icon">
                 <use href="./images/sprite.svg#icon-weight"></use>
-            </svg>
+            </svg> -->
             <h3 class="advantages-list__title">16kg</h3>
             <p class="advantages-list__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
         </li>
         <li class="advantages-list__item">
-            <svg class="advantages-list__icon" >
+            <!-- <svg class="advantages-list__icon" >
                 <use href="./images/sprite.svg#icon-ice-cream"></use>
-            </svg>
+            </svg> -->
             <h3 class="advantages-list__title">84</h3>
             <p class="advantages-list__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
         </li>
