--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,5 @@
 <footer class="footer container">
+    <div class="footer-info">
     <div class="footer-tagline">
         <p class="footer-tagline_thin">homemade ice cream made </p>
         <p class="footer-tagline_thick">with passion</p>
@@ -27,8 +28,9 @@
                 </a>
             </li>
         </ul>
-        <p class="footer-contact__text">Feel free to contact</p>
-        <a class="footer-contact__tel link" href="tel:+610383766284">+61 (0) 383 766 284</a>
+        <p class="footer-contact__text">Feel free to contact <span><a class="footer-contact__tel link" href="tel:+610383766284">+61 (0) 383 766 284</a></span></p>
+        
+    </div>
     </div>
     <div class="copyright">
         <p class="copyright__text">&copy; 2022 - IceCream. All Rights Reserved. </p>
