--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -8,6 +8,7 @@
 
 @import './components/button';
 @import './components/modal-windows';
+@import './components/modal-form';
 
 @import './layout/header';
 @import './layout/products';
