--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -43,8 +43,8 @@
             <button class="contacts-button__location button-color" type="button" data-modal-map-open>
                 Our Locations
             </button>
-            <button class="contacts-button__franchise button-transparent" type="button">
-                <a class="contacts-button__franchise-link link" href="">Franchise</a>
+            <button class="contacts-button__franchise button-transparent" type="button" data-modal-franchise-open>
+                Franchise
                 <!-- <svg width="24" height="24">
                 <use href="./images/icons.svg#icon-send"></use>
                 </svg> -->
