--- a/src/sass/components/_modal-windows.scss
+++ b/src/sass/components/_modal-windows.scss
@@ -1,6 +1,4 @@
 
-
-
 .backdrop {
     position: fixed;
     z-index: 100;
@@ -59,7 +57,7 @@
                 }
         }
 
-     .modal-video-descr {
+     .modal-video-descr, .modal-franchise-descr {
         font-family: 'Montserrat';
         font-style: normal;
         font-weight: 400;
@@ -105,7 +103,6 @@
             color: var(--title-text-color--);
             margin-bottom: 20px;
         }
-
 
           
 }
@@ -156,7 +153,7 @@
             }
         }
 
-        .modal-video-descr {
+        .modal-video-descr, .modal-franchise-descr {
             font-family: 'Montserrat';
             font-style: normal;
             font-weight: 400;
