--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -6,6 +6,12 @@ body {
     letter-spacing: 0.04em;
 }
 
+// .text {
+//     font-size: 14px;
+//     line-height: 1.71;
+//     color: var(--text-color);
+// }
+
 h1,
 h2,
 h3,
