--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -1,58 +1,183 @@
+.products {
+    padding-top: 60px;
+    padding-bottom: 60px;
+
+    @media screen and (min-width: 768px) {
+        padding-top: 61px;
+        padding-bottom: 82px;
+    }
+
+    @media screen and (min-width: 768px) {
+        padding-top: 60px;
+        padding-bottom: 66px;
+    }
+}
+
+.products-overlay {
+        margin-left: auto;
+        margin-right: auto;
+        
+            // background-repeat: no-repeat;
+            // background-position: center;
+            // background-size: cover;
+        
+        
+            background-image: url(../images/products/ice-bcg1_mob.jpg), url(../images/products/ice-bcg2_mob.jpg), url(../images/products/ice-bcg3_mob.jpg);
+        
+            @media screen and (min-device-pixel-ratio: 2),
+            screen and (min-resolution: 192dpi),
+            screen and (min-resolution: 2dppx) {
+                background-image: url(../images/products/ice-bcg1_mob@2x.jpg), url(../images/products/ice-bcg2_mob@2x.jpg), url(../images/products/ice-bcg3_mob@2x.jpg);
+            }
+}
+
+@media screen and (min-width: 768px) {
+    .products-overlay {
+        background-image: url(../images/products/ice-bcg_tab.jpg);
+    }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
+screen and (min-resolution: 192dpi),
+screen and (min-resolution: 2dppx) {
+    .prducts-overlay {
+        background-image: url(../images/products/ice-bcg_tab@2x.jpg);
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .prducts-overlay {
+        // width: 1600px;
+        // height: 600px;
+        background-image: url(../images/products/ice-bcg_desc.jpg);
+    }
+
+}
+
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),
+screen and(min-resolution: 192dpi),
+screen and(min-resolution: 2dppx) {
+    .prducts-overlay {
+        background-image: url(../images/products/ice-bcg_desc@2x.jpg);
+    }
+
+}
+
 .label {
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 1.22;
+        
+    
     text-align: center;
+    text-transform: uppercase;
+    
+    color: var(--title-text-color);
+
+    @media screen and (min-width: 768px) {
+        font-size: 22px;
+        line-height: 1.22;
+        
+    }
+
+    @media screen and (min-width: 1200px) {
+        font-size: 30px;
+        line-height: 1.23;
+    
+    }
 }
 
 .titel {
-    
+    margin-bottom: 148px;
 
-
+    font-family: 'Seymour One';
+    font-style: normal;
     font-weight: 400;
     font-size: 30px;
     line-height: 1.26;
-
-
+        
+    
     text-align: center;
     letter-spacing: 0.04em;
     text-transform: uppercase;
-
     
     color: var(--title-text-color);
+
+    @media screen and (min-width: 768px) {
+            font-size: 34px;
+            line-height: 1.26;
+    
+        }
+    
+    @media screen and (min-width: 1200px) {
+            font-size: 36px;
+            line-height: 1.25;
+    
+        }
+    
 }
 
 .product__titel {
-    font-family: 'Montserrat';
-    font-style: normal;
     font-weight: 700;
     font-size: 20px;
     line-height: 1.2;
 
-
-
     padding-bottom: 40px;
+
+    @media screen and (min-width: 768px) {
+            font-size: 22px;
+            line-height: 1.22;
+    
+        }
+    
+    @media screen and (min-width: 1200px) {
+        font-size: 30px;
+        line-height: 1.23;
+    
+    }
 }
 
 .text {
     text-align: center;
-    margin-bottom: 90px;
+    
 
-    font-family: 'Montserrat';
-    font-style: normal;
     font-weight: 400;
     font-size: 14px;
-    line-height: 176%;
-        
-    
-        
+    line-height: 176%;    
     letter-spacing: 0.04em;
     
-    color: #131313;
     color: var(--primary-text-color);
 
-
+    @media screen and (min-width: 1200px) {
+        font-size: 16px;
+            
+    
+    }
 
 }
+
 .product__list {
-    padding: 0;
+    @media screen and (max-width: 767px) {
+        display: flex;
+        flex-direction: column;
+        gap: 164px;
+
+    }
+    
+    
+
+    @media screen and (min-width: 768px) {
+        display: flex;
+        gap: 16px;
+        
+    }
+
+    @media screen and (min-width: 768px) {
+        gap: 32px;
+    }
+
+
 }
 
 
@@ -67,8 +192,13 @@
     border-radius: 24px;
     padding-left: 40px;
     padding-right: 40px;
-    // padding-top: 20px;
-    // padding-bottom: 20px;
+   
+
+    @media screen and (min-width: 768px) {
+        width: 370px;
+        
+       }
+
 }
 
 .green {
@@ -88,43 +218,34 @@
     border-radius: 50%;
     position: relative;
     bottom: 100px;
-
-
-    // background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #D9D9D9;
-        
-    // box-shadow: 0px 5.40397px 20.2649px rgba(153, 114, 23, 0.25);
-
-
-    background-image: linear-gradient(0deg, rgba(213, 117, 63, 0.7), rgba(213, 117, 63, 0.7)), #D9D9D9;
-    box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.25);
-}
-
-// card-set
- .card-set {
-     display: flex;
-     flex-wrap: wrap;
-     gap: var(--indent);
-
- }
-
- .card-set__item {
-
-     flex-basis: calc((100% - var(--indent) * var(--items) - 1) / var(--items));
- }
-
-.product__item {
-    --items: 1;
-
+    z-index: 1000;
 
     @media screen and (min-width: 768px) {
-        --items: 3;
+        bottom: 60px;
+    }
+    
 
+}
 
+.product__bcg-img {
+    border-radius: 50%;
+    position: relative;
+    bottom: 300px;
+    
+    background: linear-gradient(0deg, rgba(156, 190, 143, 0.7), rgba(156, 190, 143, 0.7)), #D9D9D9;
+    box-shadow: 0px 5.34219px 20.0332px rgba(10, 136, 23, 0.25);
+
+    @media screen and (min-width: 768px) {
+        bottom: 170px;
     }
 
-    @media screen and (min-width: 1200px) {
-        --items: 3;
 
-    }
 
+}
+
+.button-info {
+    background-color: transparent;
+        border: none;
+        padding: 0;
+        line-height: 0;
 }
