--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,9 +1,9 @@
-
 <section id="about" class="container about">
   <p class="about-label">Tradition and love</p>
   <h2 class="about-title">How it's made?</h2>
   <div class="about-wrapper">
     <div class="about-wrapper__thumb">
+      <div class="box"></div>
       <picture>
         <source
           srcset="./images/cow-desktop.jpg 1x, ./images/cow-desktop@2x.jpg 2x"
@@ -36,10 +36,10 @@
         This is enough to choose ice cream and coffee for any mood!
       </p>
       <button class="about-button button-color" data-modal-video-open>
-        Read more
-        <!-- <svg class="" width="12" height="12">
-        <use href=""></use>
-      </svg> -->
+        <span class="about-button__text">Read more</span>
+        <svg class="about-button__icon" width="12" height="12">
+          <use href="./images/sprite.svg#icon-Frame-32"></use>
+        </svg>
       </button>
     </div>
   </div>
