--- a/src/sass/layout/_slickgalary.scss
+++ b/src/sass/layout/_slickgalary.scss
@@ -26,14 +26,14 @@
 
 .galary-icecream__list .slick-prev.slick-arrow {
     left: 20%;
-    background: url(/src/images/forward.svg) no-repeat;
+    background: url(/src/images/galary&customers/forward.svg) no-repeat;
     background-size: cover;
     background-position: center;
 }
 
 .galary-icecream__list .slick-next.slick-arrow {
     right: 20%;
-    background: url(/src/images/reply.svg) no-repeat;
+    background: url(/src/images/galary&customers/reply.svg) no-repeat;
     background-size: cover;
     background-position: center;
 }
