--- a/src/sass/layout/_customer-reviews.scss
+++ b/src/sass/layout/_customer-reviews.scss
@@ -4,6 +4,7 @@
     margin: 0 auto;
     padding-right:30px;
     padding-left:30px;
+    padding-bottom: 48px;
     background-image: url(../images/products/ice-bcg1_mob.jpg);
        }  
         .customer-box__img{
@@ -20,7 +21,7 @@
    border-radius: 10px;
    margin: 0 auto;
    margin-bottom: 30px;
-   max-width: 280px;
+   max-width: 480px;
 
 font-family: 'Montserrat';
     font-style: normal;
