--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -15,6 +15,7 @@
 @import './layout/advantages';
 @import './layout/gallery';
 @import './layout/slickgalary';
+@import './layout/slickcustomers';
 @import './layout/customer-reviews';
 @import './layout/contacts';
 @import './layout/footer';
