--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -8,6 +8,9 @@
     --button-text-black: #000000;
     --button-text-white: #FCFCFC;
     --transition-func: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    --dots-color: #D9D9D9;
+    --dots-color-active:#84A178;
+    --transition-dur-func: all 500ms cubic-bezier(0.4, 0, 0.2, 1);
 
     --indent: 30px;
     --items: 3;
