--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -23,12 +23,91 @@
             "
             media="(max-width:767px)" />
           <img
-            src="./images/pexels-sebastian-coman-photography-3625371 (1).jpg"
+            src="./images/galary&customers/icecream1-m.jpg "
             alt="ice-cream"
             class="galary-icecream__img"
         /></picture>
       </li>
       <li class="galary-icecream__items">
+        <picture>
+          <source
+            srcset="
+              ./images/galary&customers/icecream1-d.jpg    1x,
+              ./images/galary&customers/icecream1-d@2x.jpg 2x
+            "
+            media="(min-width:1200px)" />
+          <source
+            srcset="
+              ./images/galary&customers/icecream1-t.jpg    1x,
+              ./images/galary&customers/icecream1-t@2x.jpg 2x
+            "
+            media="(min-width:768px)" />
+          <source
+            srcset="
+              ./images/galary&customers/icecream1-m.jpg    1x,
+              ./images/galary&customers/icecream1-m@2x.jpg 2x
+            "
+            media="(max-width:767px)" />
+          <img
+            src="./images/galary&customers/icecream1-m.jpg "
+            alt="ice-cream"
+            class="galary-icecream__img"
+        /></picture>
+      </li>
+      <li class="galary-icecream__items">
+        <picture>
+          <source
+            srcset="
+              ./images/galary&customers/icecream1-d.jpg    1x,
+              ./images/galary&customers/icecream1-d@2x.jpg 2x
+            "
+            media="(min-width:1200px)" />
+          <source
+            srcset="
+              ./images/galary&customers/icecream1-t.jpg    1x,
+              ./images/galary&customers/icecream1-t@2x.jpg 2x
+            "
+            media="(min-width:768px)" />
+          <source
+            srcset="
+              ./images/galary&customers/icecream1-m.jpg    1x,
+              ./images/galary&customers/icecream1-m@2x.jpg 2x
+            "
+            media="(max-width:767px)" />
+          <img
+            src="./images/galary&customers/icecream1-m.jpg "
+            alt="ice-cream"
+            class="galary-icecream__img"
+        /></picture>
+      </li>
+      <li class="galary-icecream__items">
+        <picture>
+          <source
+            srcset="
+              ./images/galary&customers/icecream1-d.jpg    1x,
+              ./images/galary&customers/icecream1-d@2x.jpg 2x
+            "
+            media="(min-width:1200px)" />
+          <source
+            srcset="
+              ./images/galary&customers/icecream1-t.jpg    1x,
+              ./images/galary&customers/icecream1-t@2x.jpg 2x
+            "
+            media="(min-width:768px)" />
+          <source
+            srcset="
+              ./images/galary&customers/icecream1-m.jpg    1x,
+              ./images/galary&customers/icecream1-m@2x.jpg 2x
+            "
+            media="(max-width:767px)" />
+          <img
+            src="./images/galary&customers/icecream1-m.jpg "
+            alt="ice-cream"
+            class="galary-icecream__img"
+        /></picture>
+      </li>
+
+      <!-- <li class="galary-icecream__items">
         <img
           src="./images/pexels-sebastian-coman-photography-3625373 (1).jpg"
           alt="ice-cream"
@@ -48,7 +127,7 @@
           alt="ice-cream"
           class="galary-icecream__img"
         />
-      </li>
+      </li> -->
     </ul>
   </div>
 </section>
