--- a/src/sass/layout/_customer-reviews.scss
+++ b/src/sass/layout/_customer-reviews.scss
@@ -22,6 +22,7 @@
    margin: 0 auto;
    margin-bottom: 30px;
    max-width: 480px;
+   padding: 34px 39px;
 
 font-family: 'Montserrat';
     font-style: normal;
