--- a/src/sass/components/_modal-form.scss
+++ b/src/sass/components/_modal-form.scss
@@ -23,8 +23,6 @@
         }
     }
 
-
-
     .modal-form-field {
         margin-bottom: 10px;
 
@@ -69,12 +67,6 @@
         line-height: 17px;
         padding: 7px 43px;
 
-        &:hover,
-        &:focus {
-            background-color: var(--hover-background-color);
-
-        }
-
     }
 
 }
@@ -84,7 +76,9 @@
     .modal-form {
         display: flex;
         flex-direction: column;
-        margin-top: 32px;
+        margin: 32px auto 0;
+        max-width: 368px;
+
     }
 
         .modal-form-input {
@@ -103,8 +97,6 @@
 
         }
     }
-
-
 
     .modal-form-field {
         margin-bottom: 10px;
@@ -150,13 +142,6 @@
         font-size: 14px;
         line-height: 17px;
         padding: 12px 43px;
-
-
-        &:hover,
-        &:focus {
-            background-color: var(--hover-background-color);
-
-        }
 
     }
 
