--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -29,7 +29,7 @@
         <use href="./images/sprite1.svg#burger-icon"></use>
       </svg>
     </button>
-    <button type="button" class="button header-btn-modal">
+    <button type="button" class="button header-btn-modal" data-modal-buynow-open>
       <span class="header-btn-modal__name">Buy now</span>
     </button>
   </div>
